--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,15 @@ commands =
     --cov-report=xml:{envlogdir}/coverage.xml
   pylint {envsitepackagesdir}/attributes_doc.py
   pycodestyle {envsitepackagesdir}/attributes_doc.py
+
+
+[testenv:2.7]
+commands =
+  pytest tests \
+    --junitxml={envlogdir}/junit.xml \
+    --cov={envsitepackagesdir}/attributes_doc.py \
+    --cov-report=term \
+    --cov-report=html:{envlogdir}/coverage \
+    --cov-report=xml:{envlogdir}/coverage.xml
+  pylint {envsitepackagesdir}/attributes_doc.py
+  pycodestyle {envsitepackagesdir}/attributes_doc.py
