Tox: fix testenv

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands =
   pycodestyle {envsitepackagesdir}/attributes_doc.py
 
 
-[testenv:2.7]
+[testenv:py27]
 commands =
   pytest tests \
     --junitxml={envlogdir}/junit.xml \
