--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,10 @@ commands =
 
 
 [testenv:py27]
+deps =
+  .[test]
+  pylint<2
+  pytest<5
 commands =
   pytest tests \
     --junitxml={envlogdir}/junit.xml \
@@ -28,5 +32,3 @@ commands =
     --cov-report=term \
     --cov-report=html:{envlogdir}/coverage \
     --cov-report=xml:{envlogdir}/coverage.xml
-  pylint {envsitepackagesdir}/attributes_doc.py
-  pycodestyle {envsitepackagesdir}/attributes_doc.py
