--- a/tox.ini
+++ b/tox.ini
@@ -10,25 +10,15 @@ commands =
   mypy {envsitepackagesdir}/attributes_doc.py \
     --ignore-missing-imports \
     --follow-imports silent
-  pytest tests \
-    --junitxml={envlogdir}/junit.xml \
-    --cov={envsitepackagesdir}/attributes_doc.py \
-    --cov-report=term \
-    --cov-report=html:{envlogdir}/coverage \
-    --cov-report=xml:{envlogdir}/coverage.xml
+  coverage run --include {envsitepackagesdir}/attributes_doc.py {envbindir}/pytest tests --junitxml={envlogdir}/junit.xml
+  coverage html -d {envlogdir}/coverage_html
+  coverage xml -o {envlogdir}/coverage.xml
+  coverage report -m
   pylint {envsitepackagesdir}/attributes_doc.py
   pycodestyle {envsitepackagesdir}/attributes_doc.py
 
-
-[testenv:py27]
+[testenv:2.7]
 deps =
   .[test]
-  pylint<2
-  pytest<5
 commands =
-  pytest tests \
-    --junitxml={envlogdir}/junit.xml \
-    --cov={envsitepackagesdir}/attributes_doc.py \
-    --cov-report=term \
-    --cov-report=html:{envlogdir}/coverage \
-    --cov-report=xml:{envlogdir}/coverage.xml
+  pytest tests
