Fix some errors for Python2 #2

--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,26 @@
 [tox]
-envlist = 2.7,3.6,3.7
+envlist = 2.7, 3.6, 3.7
 
 [testenv]
 deps =
   .[test]
 setenv =
   COVERAGE_FILE = {envlogdir}/.coverage
+
+[testenv:2.7]
 commands =
-  mypy {envsitepackagesdir}/attributes_doc.py \
-    --ignore-missing-imports \
-    --follow-imports silent
+  pytest tests
+
+[testenv:3.6]
+commands =
+  pytest tests
+
+[testenv:3.7]
+commands =
+  mypy {envsitepackagesdir}/attributes_doc.py --ignore-missing-imports --follow-imports silent
   coverage run --include {envsitepackagesdir}/attributes_doc.py {envbindir}/pytest tests --junitxml={envlogdir}/junit.xml
   coverage html -d {envlogdir}/coverage_html
   coverage xml -o {envlogdir}/coverage.xml
   coverage report -m
   pylint {envsitepackagesdir}/attributes_doc.py
   pycodestyle {envsitepackagesdir}/attributes_doc.py
-
-[testenv:2.7]
-deps =
-  .[test]
-commands =
-  pytest tests
