--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,18 @@ language: python
 matrix:
   include:
     - python: '2.7'
-      env: TOXENV=py27
+      env: TOXENV=2.7
     - python: '3.6'
-      env: TOXENV=py36
+      env: TOXENV=3.6
     - python: '3.7'
-      env: TOXENV=py37
+      env: TOXENV=3.7
   fast_finish: true
 install:
   - pip install tox codecov
 script:
   - tox -v
 after_success:
-  - codecov --file .tox/3.6/log/coverage.xml
+  - codecov --file .tox/3.7/log/coverage.xml
 deploy:
   provider: pypi
   user: TimofeyKukushkin
