--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = 2.7, 3.6, 3.7, 3.8
+envlist = 2.7, 3.6, 3.7, 3.8, 3.9
 
 [testenv]
 deps =
@@ -7,14 +7,16 @@ deps =
 setenv =
   COVERAGE_FILE = {envlogdir}/.coverage
 commands =
-  coverage run --include {envsitepackagesdir}/attributes_doc.py {envbindir}/pytest tests --junitxml={envlogdir}/junit.xml
-  coverage html -d {envlogdir}/coverage_html
-  coverage xml -o {envlogdir}/coverage.xml
-  coverage report -m
-  
-[testenv:3.8]
+  pytest tests \
+    --junitxml={envlogdir}/junit.xml \
+    --cov={envsitepackagesdir}/attributes_doc \
+    --cov-report=term \
+    --cov-report=html:{envlogdir}/coverage \
+    --cov-report=xml:{envlogdir}/coverage.xml
+
+[testenv:3.9]
 commands =
   {[testenv]commands}
-  mypy {envsitepackagesdir}/attributes_doc.py --ignore-missing-imports --follow-imports silent
-  pylint {envsitepackagesdir}/attributes_doc.py
-  pycodestyle {envsitepackagesdir}/attributes_doc.py
+  mypy --strict {envsitepackagesdir}/attributes_doc
+  pylint {envsitepackagesdir}/attributes_doc
+  pycodestyle {envsitepackagesdir}/attributes_doc
