--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [2.7, 3.6, 3.7, 3.8, 3.9]
+        python-version: [2.7, 3.6, 3.7, 3.8, 3.9, 3.10]
         include:
           - python-version: 2.7
             toxenv: py27
@@ -20,6 +20,8 @@ jobs:
             toxenv: py38
           - python-version: 3.9
             toxenv: py39
+          - python-version: 3.10
+            toxenv: py310
     env:
       TOXENV: ${{ matrix.toxenv }}
 
