--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,19 +8,19 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [2.7, 3.6, 3.7, 3.8, 3.9, 3.10]
+        python-version: ['2.7', '3.6', '3.7', '3.8', '3.9', '3.10']
         include:
-          - python-version: 2.7
+          - python-version: '2.7'
             toxenv: py27
-          - python-version: 3.6
+          - python-version: '3.6'
             toxenv: py36
-          - python-version: 3.7
+          - python-version: '3.7'
             toxenv: py37
-          - python-version: 3.8
+          - python-version: '3.8'
             toxenv: py38
-          - python-version: 3.9
+          - python-version: '3.9'
             toxenv: py39
-          - python-version: 3.10
+          - python-version: '3.10'
             toxenv: py310
     env:
       TOXENV: ${{ matrix.toxenv }}
