--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-envlist = 2.7, 3.6, 3.7, 3.8, 3.9, 3.10
+envlist = tests_py{27,36,37,38,39,310}, lint
 
-[testenv]
+[testenv:tests_py{27,36,37,38,39,310}]
 deps =
-  .[test]
+  .
+  -r requirements/tests.txt
 setenv =
   COVERAGE_FILE = {envlogdir}/.coverage
 commands =
@@ -14,9 +15,12 @@ commands =
     --cov-report=html:{envlogdir}/coverage \
     --cov-report=xml:{envlogdir}/coverage.xml
 
-[testenv:3.9]
+[testenv:lint]
+basepython = py310
+deps =
+  .
+  -r requirements/lint.txt
 commands =
-  {[testenv]commands}
   mypy --strict {envsitepackagesdir}/attributes_doc
   pylint {envsitepackagesdir}/attributes_doc
   pycodestyle {envsitepackagesdir}/attributes_doc
