Try to improve CI

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands =
     --cov-report=xml:{envlogdir}/coverage.xml
 
 [testenv:lint]
-basepython = py310
+basepython = python3.10
 deps =
   .
   -r requirements/lint.txt
