Try to improve CI

--- a/tox.ini
+++ b/tox.ini
@@ -18,9 +18,9 @@ commands =
 [testenv:lint]
 basepython = python3.10
 deps =
-  .
+  -e .
   -r requirements/lint.txt
 commands =
-  mypy --strict {envsitepackagesdir}/attributes_doc
-  pylint {envsitepackagesdir}/attributes_doc
-  pycodestyle {envsitepackagesdir}/attributes_doc
+  black --check .
+  flake8 src/attributes_doc
+  mypy --strict src/attributes_doc
