Try to improve CI

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ deps =
   -e .
   -r requirements/lint.txt
 commands =
-  black --check .
+  isort --check --diff .
+  black --check --diff .
   flake8 src/attributes_doc
   mypy --strict src/attributes_doc
