--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-envlist = tests_py{27,36,37,38,39,310}, lint
+envlist = tests-py{27,36,37,38,39,310,311,312}, lint
 
-[testenv:tests_py{27,36,37,38,39,310}]
+[testenv:tests-py{27,36,37,38,39,310,311,312}]
 deps =
   .
   -r requirements/tests.txt
